Restarted project in ASP .NET CORE MVC Set up Identity to manage user accounts. Customised user account details

--- a/TheMusicExchangeProject/appsettings.json
+++ b/TheMusicExchangeProject/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TheMusicExchangeProjectContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TheMusicExchangeProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
