--- a/TheMusicExchangeProject/TheMusicExchangeProject.csproj
+++ b/TheMusicExchangeProject/TheMusicExchangeProject.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.2" />
+    <PackageReference Include="PusherServer" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
