--- a/TheMusicExchangeProject/TheMusicExchangeProject.csproj
+++ b/TheMusicExchangeProject/TheMusicExchangeProject.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.2" />
     <PackageReference Include="PusherServer" Version="4.1.0" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="17.1.0.44" />
   </ItemGroup>
 
 </Project>
